# boost_callable_traits

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml  Jamroot.jam  README.md  appveyor.yml  build.jam  project-config.jam
.github/workflows/: ci.yml
cmake/: CheckCxxCompilerSupport.cmake
doc/: CMakeLists.txt  Jamfile.v2  autodoc.xml  callable_traits.qbk  hideous_template.snippet.cpp  interface_example.qbk  make_function_example.qbk
doc/html/: callable_traits_interface_example.html  index.html  standalone_HTML.manifest
doc/html/callable_traits/: acknowledgements.html  building.html  compatibility.html  concepts.html  contact.html  cpp_17_features.html  development.html  example_std_function_sugar.html  faq.html  function_sugar_example.html  glossary.html  headers.html  member_pointer_features.html  member_qualifier_features.html  other_features.html  parameter_list_features.html  quick_example.html  ref.html  ref_add_calling_convention.html  ref_add_const_qualifier.html  ref_add_cv_qualifiers.html  ref_add_function_const.html  ref_add_function_cv.html  ref_add_function_lvalue.html  ref_add_function_rvalue.html  ref_add_function_volatile.html  ref_add_lvalue_qualifier.html  ref_add_member_const.html  ref_add_member_cv.html  ref_add_member_lvalue_reference.html  ref_add_member_rvalue_reference.html  ref_add_member_volatile.html  ref_add_rvalue_qualifier.html  ref_add_transaction_safe.html  ref_add_varargs.html  ref_add_volatile_qualifier.html  ref_apply_member_pointer.html  ref_apply_return.html  ref_apply_return0.html  ref_arg_at.html  (+80 more)
example/: CMakeLists.txt  add_const_qualifier.cpp  add_cv_qualifiers.cpp  add_function_const.cpp  add_function_cv.cpp  add_function_lvalue.cpp  add_function_rvalue.cpp  add_function_volatile.cpp  add_lvalue_qualifier.cpp  add_member_const.cpp  add_member_cv.cpp  add_member_lvalue_reference.cpp  add_member_rvalue_reference.cpp  add_member_volatile.cpp  add_noexcept.cpp  add_rvalue_qualifier.cpp  add_transaction_safe.cpp  add_varargs.cpp  ambiguity.cpp  apply_member_pointer.cpp  arg_at.cpp  args.cpp  bind_1.cpp  bind_2.cpp  bind_tools.cpp  calling_convention_cdecl.cpp  can_invoke_constexpr_function_object.cpp  can_invoke_constexpr_function_pointer.cpp  can_invoke_constexpr_member_function_pointer.cpp  can_invoke_function_object.cpp  can_invoke_function_pointer.cpp  can_invoke_function_reference.cpp  can_invoke_member_function_pointer.cpp  changing_calling_conventions.cpp  clear_args.cpp  expand_args.cpp  expand_args_left.cpp  expand_args_right.cpp  experimental_calling_convention_cdecl.cpp  experimental_changing_calling_conventions.cpp  (+59 more)
example/apply_member_pointer/: example.cpp
example/args/: args.cpp
example/bind/: example1.cpp  example2.cpp
example/bind_expr/: example1.cpp  example2.cpp  example_1.cpp  example_2.cpp
example/can_invoke/: function_object.cpp  function_pointer.cpp  function_reference.cpp  member_function_pointer.cpp
example/can_invoke_constexpr/: function_object.cpp  function_pointer.cpp  member_function_pointer.cpp
example/common_signature/: common_signature.cpp
example/function_type/: function_type.cpp
example/is_constexpr/: function.cpp  function_object.cpp
example/remove_member_pointer/: example.cpp
example/result_of/: example.cpp
example/signature/: signature.cpp
example/std_function/: example.cpp  make_function.hpp
include/boost/: callable_traits.hpp
include/callable_traits/: add_calling_convention.hpp  add_const_qualifier.hpp  add_cv_qualifiers.hpp  add_function_const.hpp  add_function_cv.hpp  add_function_lvalue.hpp  add_function_rvalue.hpp  add_function_volatile.hpp  add_lvalue_qualifier.hpp  add_member_const.hpp  add_member_cv.hpp  add_member_lvalue_reference.hpp  add_member_rvalue_reference.hpp  add_member_volatile.hpp  add_rvalue_qualifier.hpp  add_transaction_safe.hpp  add_varargs.hpp  add_volatile_qualifier.hpp  any_arg.hpp  apply_member_pointer.hpp  apply_return.hpp  arg_at.hpp  args.hpp  arity.hpp  best_match.hpp  bind.hpp  bind_args_t.hpp  bind_expression.hpp  bind_expression_parser.hpp  bind_expression_traits.hpp  callable_traits.hpp  can_dereference.hpp  can_invoke.hpp  can_invoke_constexpr.hpp  can_invoke_t.hpp  categorize_bind_arg.hpp  clear_args.hpp  clear_args.hpp.EQ1952  clear_args.hpp.Vb1952  clear_args.hpp.dD1952  (+122 more)
meta/: libraries.json
qtcreator/: callable_traits.pro
qtcreator/doc/: doc.pro
qtcreator/include/: include.pro
qtcreator/main/: main.cpp  main.pro
qtcreator/project/: project.pro
qtcreator/tests_and_examples/: tests_and_examples.pro
scripts/: LLVM-vs2014-Win32-Debug.bat  MinGW_gcc-5.3-Win32-Release.bat  gcc-libcxx2.sh  wandbox_deploy.py
scripts/internal/: LLVM-vs2014.bat
scripts/posix/: clang-libcxx.sh  clang-libstdcxx.sh  gcc-libstdcxx.sh
scripts/windows/: LLVM-vs2014-Win32-Debug.bat  LLVM-vs2014-Win32-Release.bat  LLVM-vs2014-x64-Debug.bat  LLVM-vs2014-x64-Release.bat  MSVC-Win32-Debug.bat  MinGW-Win32-Release-no-experimental.bat  MinGW-Win32-Release.bat
test/: CMakeLists.txt  Jamfile.v2  add_function_const.cpp  add_function_cv.cpp  add_function_lvalue.cpp  add_function_rvalue.cpp  add_function_volatile.cpp  add_member_const.cpp  add_member_const_constraints.cpp  add_member_cv.cpp  add_member_lvalue_reference.cpp  add_member_rvalue_reference.cpp  add_member_volatile.cpp  add_noexcept_constraints.cpp  add_transaction_safe.cpp  add_transaction_safe_constraints.cpp  add_varargs.cpp  add_varargs_constraints.cpp  apply_member_pointer_constraints.cpp  apply_member_pointer_function.cpp  apply_member_pointer_pmd.cpp  apply_member_pointer_pmf.cpp  arg_at_constraints.cpp  args.cpp  args_constraints.cpp  args_pack_manipulations.cpp  arity.cpp  best_match_bind.cpp  bind_1.cpp  bind_2.cpp  bind_args.cpp  bind_expression.cpp  bind_expression_parser.cpp  can_invoke.cpp  can_invoke_constexpr.cpp  can_invoke_libcxx.cpp  class_of_constraints.cpp  clear_args.cpp  clear_args_constraints.cpp  collapse_flags.cpp  (+121 more)
test/detail/: args_pack_manipulations.cpp  best_match.cpp  collapse_flags.cpp  flatten_bind_expressions.cpp  make_constexpr.cpp
(+199 files in other folders)
